# ai-brain

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  START_HERE_WITH_CODEX.md  mkdocs.yml  pyproject.toml
contracts/: agentic_framework_map.yaml  domain_agent_routing.yaml  expected_behavior.md  harness_quality_gates.yaml  marketing_skill_integration.yaml  rampstack_skill_integration.yaml  team_framework.yaml
docs/: agent_plumbing.md  agent_skills_integration.md  agentic_sdlc.md  automation_prompts.md  codex_github_actions.md  how_this_was_built.md  improvement_mode.md  index.md  maintenance.md  memory.md  pr_review.md  ready_to_discuss.md  security.md  security_review.md  spec_driven_workflow.md  team_reliability.md
memory/: PROJECT_MEMORY.template.md
scripts/: build_and_launch.sh
specs/: prompt_spec_template.md
state/: sdlc_state.template.json
team_framework/: __init__.py  roles.py
tests/: conftest.py  test_agentic_framework_map.py  test_combined_report_html.py  test_conversation_feedback.py  test_dropin_export.py  test_harness_quality_contract.py  test_health.py  test_improvement_queue.py  test_memory_state.py  test_python_bootstrap.py  test_repo_init.py  test_target_repo_workflow.py  test_team_framework.py  test_team_reliability.py
tools/: __init__.py  analyze_conversation_feedback.py  check_implementation_drift.py  check_python.py  check_target_drift.py  clean_manual_copy.py  export_dropin_bundle.py  generate_combined_report_html.py  init_repo_profile.py  install_root_agents.py  manage_repo_work_spec.py  run_improvement_queue.py  (+7 more)
(+21 files in other folders)
